@@ -1,59 +1,47 @@
-apply plugin: 'java'
+buildscript {
+    repositories {
+        mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
+    }
+    dependencies {
+        classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
+        classpath 'org.kordamp.gradle:jdeps-gradle-plugin:0.5.0'
+        classpath 'org.kordamp.gradle:jdeprscan-gradle-plugin:0.4.0'
+        classpath 'gradle.plugin.gradle-java9-collision:plugin:0.2.3'
+        classpath 'org.javamodularity:moduleplugin:1.2.1'
+        classpath 'gradle.plugin.org.beryx:badass-jlink-plugin:2.1.6'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
+        classpath 'org.slf4j:slf4j-simple:1.8.0-beta2'
+    }
+}
+
 apply plugin: 'application'
+apply plugin: 'com.google.osdetector'
+apply plugin: 'org.kordamp.gradle.jdeps'
+apply plugin: 'org.kordamp.gradle.jdeprscan'
+apply plugin: 'org.jonnyzzz.java9c'
+apply plugin: 'org.javamodularity.moduleplugin'
+apply plugin: 'org.beryx.jlink'
+apply plugin: 'com.github.ben-manes.versions'
 
 repositories {
     mavenCentral()
-    mavenLocal()
-    jcenter()
 }
 
-mainClassName='game2048.Game2048'
-group 'game2048'
-version '1.0.0-SNAPSHOT'
+ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
 
-def currentOS = org.gradle.internal.os.OperatingSystem.current();
-def classifier
-if (currentOS.isWindows()) {
-    classifier = 'win'
-} else if (currentOS.isLinux()) {
-    classifier = 'linux'
-} else if (currentOS.isMacOsX()) {
-    classifier = 'mac'
-}
-
-compileJava {
-    doFirst {
-        options.compilerArgs = [
-            '--module-path', classpath.asPath,
-            '--add-modules', 'javafx.controls'
-        ]
-        classpath = sourceSets.main.compileClasspath
-    }
-}
-run {
-    doFirst {
-        jvmArgs = [
-            '--module-path', classpath.filter{!it.name.startsWith("javafx-") || it.name.contains("-$classifier")}.asPath,
-            '--add-modules', 'javafx.controls'
-        ]
-        classpath = sourceSets.main.output 
-    }
-}
+mainClassName = "fxgame/game2048.Game2048"
 
 dependencies {
-    compile "org.openjfx:javafx-controls:11-ea+25:$classifier"
-    compile "org.openjfx:javafx-graphics:11-ea+25:$classifier"
-    compile "org.openjfx:javafx-base:11-ea+25:$classifier"
-    compile 'com.google.guava:guava:23.0'
+    compile "org.openjfx:javafx-base:11.0.1:$platform"
+    compile "org.openjfx:javafx-graphics:11.0.1:$platform"
+    compile "org.openjfx:javafx-controls:11.0.1:$platform"
 }
 
-sourceSets {
-    main {
-        java {
-            srcDirs = ['src']
-        }
-        resources {
-            srcDirs = ['src']
-        }
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'game2048'
     }
 }
+
